--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,13 @@
-fastapi>=0.103
-uvicorn[standard]>=0.22
+fastapi>=0.110
+uvicorn[standard]>=0.23
 SQLAlchemy>=2.0
-pydantic>=2.0
+pydantic[email]>=2.5
 python-dotenv>=1.0
+httpx>=0.25
+requests>=2.31
+streamlit>=1.31
+pandas>=2.1
+altair>=5.0
+streamlit-autorefresh>=0.1
+pytest>=7.4
+pytest-asyncio>=0.21
